--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    //apply from: "https://gitee.com/wittyneko/gradle-tools/raw/master/config.groovy"
-    def properties = new Properties()
-    File f = file('config.properties')
-    if (f.isFile()) {
-        println("configProperties: ${f.absolutePath}")
-        properties.load(f.newDataInputStream())
-    }
-    def userHome = System.properties['user.home']
-    def path = properties.getProperty('configPath', userHome) as String
-    if (path.startsWith('~')) {
-        path = "${userHome}${path.substring(1)}"
-    }
-    if (path.startsWith('http')) {
-        path = "$path/raw/master"
-    }
-    apply from: "${path}/config.groovy"
+    def remoteRepository = 'gitee'
+    apply from: "https://${remoteRepository}.com/wittyneko/gradle-tools/raw/${remoteRepository}/properties.groovy"
+    apply from: "$configPath/config.groovy"
     apply from: "$configPath/dependencies.groovy"
     ext.kotlin_version = androidcfg.kotlin_version
+
     repositories {
         maven { url uploadMaven }
         maven { url uploadMavenSnapshots }
@@ -25,6 +13,7 @@ buildscript {
         google()
         jcenter()
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
