--- a/base/build.gradle
+++ b/base/build.gradle
@@ -1,8 +1,12 @@
 apply plugin: 'com.android.library'
 
+apply plugin: 'kotlin-kapt'
+
 apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
+
+apply from: 'dependencies.groovy'
 
 android {
     compileSdkVersion rootProject.androidcfg.compileSdkVersion
@@ -15,21 +19,42 @@ android {
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    sourceSets {
+        main.java.srcDirs = ['src/main/kotlin', 'src/main/java']
+    }
+}
+
+kotlin {
+    experimental {
+        coroutines "enable"
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:27.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    implementation_list.forEach {
+        switch (it) {
+            case dependencies_map['lifecycle-extensions']:
+                implementation it, {
+                    exclude module: 'support-fragment'
+                }
+                break
+            default:
+                implementation it
+        }
+    }
 }
 ////////////// maven仓库推送 //////////////
 
