--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,6 @@
 #configPath=https://github.com/wittyneko/gradle-tools
 #configPath=https://gitee.com/wittyneko/gradle-tools
-#configPath=~/gradle-tools
+#configPath=~/code/neko/gradle-tools
 localMavenable=false
 localMavenHost=http://192.168.1.187:8081
 defaultMaven=http://maven.aliyun.com/nexus/content/groups/public
