--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,5 @@
+def userHome = System.properties['user.home']
+
 include ':base'
 include ':gradle-tools'
-project(':gradle-tools').projectDir = file("${System.properties['user.home']}/code/neko/gradle-tools")
+project(':gradle-tools').projectDir = file("$userHome/code/neko/gradle-tools")
