update anko version

--- a/config.properties
+++ b/config.properties
@@ -16,4 +16,4 @@ androidcfg.versionCode=1
 androidcfg.versionName=1.0.0
 androidcfg.supportVersion=28.+
 androidcfg.kotlin_version=1.2.+
-androidcfg.anko_version=0.10.+
+androidcfg.anko_version=0.10.5
