--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,6 @@
 #configPath=https://github.com/wittyneko/gradle-tools/raw/master
 #configPath=https://gitee.com/wittyneko/gradle-tools/raw/master
-#configPath=~/code/neko/gradle-tools
+configPath=~/code/neko/gradle-tools
 localMavenable=false
 localMavenHost=http://192.168.1.187:8081
 defaultMaven=http://maven.aliyun.com/nexus/content/groups/public
@@ -15,5 +15,5 @@ androidcfg.targetSdkVersion=28
 androidcfg.versionCode=1
 androidcfg.versionName=1.0.0
 androidcfg.supportVersion=28.+
-androidcfg.kotlin_version=1.2.+
-androidcfg.anko_version=0.10.5
+androidcfg.kotlin_version=1.3.+
+androidcfg.anko_version=0.10.8
